--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
  }
  .isiposting {
     width: auto;
-    text-align: left;
+    text-align: justify;
     height: auto;
     margin-bottom: 2px;
     margin-top: 0;
