--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
     height: auto;
  }
  .isiposting .gambardepan {
-    width: 65%;
+    width: 120px;
     height: 150px;
     border-radius: 4px solid #dddddd;
  }
